base/services/ms-inventory/deployment.yaml
# =============================================================================
# ms-inventory - Inventory Service
# =============================================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-inventory
  labels:
    app: ms-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-inventory
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ms-inventory
    spec:
      imagePullSecrets:
        - name: ecr-cred
      containers:
        - name: ms-inventory
          image: 478468757808.dkr.ecr.ap-south-1.amazonaws.com/kubestock/ms-inventory:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 40
            periodSeconds: 10
