base/services/ms-inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-inventory
  labels:
    app: ms-inventory
    app.kubernetes.io/name: ms-inventory
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: http
  selector:
    app: ms-inventory
