base/services/ms-inventory/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ms-inventory
  labels:
    app: ms-inventory
spec:
  hosts:
  - ms-inventory
  http:
  - route:
    - destination:
        host: ms-inventory
        port:
          number: 3001
      weight: 100
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
